see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Jul-2011 Jean-Marie Simonet
 # Adding Belarussian flag image for language switcher

04-Jul-2011 Christophe Demko
 # [#26284] Error during update can delete all Joomla program files
 # [#26307] Typo in atomic template.css (Brian Teeman, bill richardson)
 # [#26310] New Eye candy feature contains CSS errors (Nikolai Plath)
 # [#26293] The com_config component does not refresh current component page when clicking on Save & Close

02-Jul-2011 Jean-Marie Simonet
 # [#26301] Front end menu formatting. Thanks Bill.

01-Jul-2011 Christophe Demko
 # [#21813] [patch] Randomise the Joomla DB Prefix During Installation (Nicholas Dionysopoulos, Omar Ramos)
 # [#26151] Setting &template= in URL gives template parameters from default- or page-assigned template style (bill richardson, Stephen Brandon)
 # [#26281] duplication of rel attribute in atomic (Jacob Waisner, bill richardson)
 # [#26174] *Unused admin modules (Jean-Marie Simonet)
 # [#26289] <input type="submit" class="hidebtn" value="Log in" /> not hidden on Hathor's Joomla! Administration Login page (Peter Chovancak)
 # [#25901] no "active"-class in TOC of multipage-content (Jean-Marie Simonet, bill richardson)
 # [#26283] Avoid logging password in system-log plugin

30-Jun-2011 Jean-Marie Simonet
 # [#26285] Update Joomla! CMS Version. Thanks Michael.

-------------------- 1.7.0 Beta1 Release [28-Jun-2011] ------------------

28-Jun-2011 Mark Dexter
 ^ [#23125] "Select a Menu Item Type" in modal box in menu item edit page (Dennis Hermatski)
 # [#26278] Issue 26199 broke some javascript alerts

28-Jun-2011 Christophe Demko