@@ -28,10 +28,6 @@ a:link, a:visited {
 	color: #025A8D;
 }
 
-a:hover {
-
-}
-
 h1, h2, h3, h4, h5,
 #header3 span,
 .step-grey,
@@ -81,20 +77,18 @@ td.item + td {
 }
 
 /* installer */
-#header1 {
+#header {
 	background: url(../images/j_header_middle.png) repeat-x;
-}
-
-#header2 {
-	background: url(../images/j_header_right.png) 100% 0 no-repeat;
-}
-
-#header3 {
-	background: url(../images/j_header_left.png) no-repeat;
 	height: 54px;
+	-webkit-border-top-right-radius: 8px;
+	-webkit-border-top-left-radius: 8px;
+	-moz-border-radius-topright: 8px;
+	-moz-border-radius-topleft: 8px;
+	border-top-right-radius: 8px;
+	border-top-left-radius: 8px;
 }
 
-#header3 span {
+#header span {
 	font-size: 22px;
 	color: #fff;
 	font-weight: bold;
@@ -102,13 +96,13 @@ td.item + td {
 	line-height: 44px;
 }
 
-#header3 span.logo {
+#header .logo {
 	display: block;
 	float: right;
 	padding: 7px 10px 0 0;
 }
 
-#header3 span.logo img {
+#header .logo img {
 	border: 0 none;
 }
 
@@ -398,10 +392,6 @@ div#javascript-warning {
 	color: white;
 }
 /* form limiting stuff */
-
-#theDefault input {
-
-}
 
 input.hidden {
 	display: none;
