@@ -43,13 +43,9 @@ JHtml::_('script', 'installation/template/js/installation.js', true, false, fals
  		</script>
 	</head>
 	<body>
-		<div id="header1">
-			<div id="header2">
-				<div id="header3">
-					<span class="logo"><a href="http://www.joomla.org" target="_blank"><img src="template/images/logo.png" alt="Joomla!" /></a></span>
-					<span>Joomla! <?php echo JVERSION; ?> <?php echo JText::_('INSTL_INSTALLATION') ?></span>
-				</div>
-			</div>
+		<div id="header">
+			<span class="logo"><a href="http://www.joomla.org" target="_blank"><img src="template/images/logo.png" alt="Joomla!" /></a></span>
+			<span>Joomla! <?php echo JVERSION; ?> <?php echo JText::_('INSTL_INSTALLATION') ?></span>
 		</div>
 		<jdoc:include type="message" />
 		<div id="content-box">
