@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+06-Jul-2011 Christophe Demko
+ [#26313] Remove more images from the installation (like 26262) (Rouven Weßling)
+
 05-Jul-2011 Jean-Marie Simonet
  # Adding Belarussian flag image for language switcher
 
